# flowcheck

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: API文档.md  PCAP测试说明.md  架构设计.md  测试说明.md  编译说明.md  项目结构.md
docs/开发日志/: 2026-02-10-FlowEngine架构优化.md  2026-02-10-tryResolveDomain代码复用优化.md  API使用指南.md  DNS引擎重构.md  FlowDNS实现总结.md  FlowEngine架构改进.md  IP域名映射改进.md  README.md  单例模式说明.md  实现总结.md
flow/: flow_defines.cpp  flow_defines.h  flow_detector.cpp  flow_detector.hpp  flow_dns.cpp  flow_dns.hpp  flow_engine.cpp  flow_engine.hpp
protocol/: protocol.h
scripts/: clean_invalid_dirs.sh  scan_invalid_dirs.sh
tests/: test_analyze_failures.cpp  test_cname.cpp  test_data_advanced.cpp  test_description.cpp  test_diagnose.cpp  test_dns_mapping.cpp  test_dns_parse.cpp  test_ip_cache.cpp  test_ip_string.cpp  test_main.cpp  test_pcap.cpp  test_with_data.cpp
